@@ -23,6 +23,7 @@ ver 0.21 (not yet released)
   - gme: try loading m3u sidecar files
   - hybrid_dsd: new decoder plugin
   - mad: move "gapless_mp3_playback" setting to "decoder" block
+  - mikmod: require at least version 3.2
   - pcm: support audio/L24 (RFC 3190)
 * resampler
   - soxr: flush resampler at end of song
